# specreduce-data

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: tox-tests.yml
docs/: conf.py  index.rst
docs/specreduce-data/: index.rst
licenses/: LICENSE.rst
specreduce-data/: readers.py
specreduce-data/tests/: test_read_extinction.py
specreduce_data/: readers.py
specreduce_data/reference_data/: README.rst
specreduce_data/reference_data/extinction/: README.md
specreduce_data/reference_data/onedstds/: README.md
specreduce_data/tests/: test_read_extinction.py  test_read_line_lists.py  test_read_onedstds.py
test_data/: README.rst
