[metadata]
name = specreduce-data
author = Astropy Specreduce contributors
author_email = astropy-dev@googlegroups.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://astropy.org
description = Test and reference data for the specreduce package
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/specreduce-data

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
specreduce-data =
    reference_data/*
    reference_data/line_lists/*
    reference_data/line_lists/iraf/*
    reference_data/line_lists/iraf/air/*
    reference_data/line_lists/iraf/vacuum/*
    reference_data/onedstds/*
    reference_data/onedstds/bstdscal/*
    reference_data/onedstds/ctio/*
    reference_data/onedstds/ctiocal/*
    reference_data/onedstds/ctionewcal/*
    reference_data/onedstds/iidscal/*
    reference_data/onedstds/irscal/*
    reference_data/onedstds/oke1990/*
    reference_data/onedstds/redcal/*
    reference_data/onedstds/spec16cal/*
    reference_data/onedstds/spec50cal/*
    reference_data/onedstds/spechayescal/*
    reference_data/onedstds/snfactory/*
    reference_data/onedstds/gemini/*
    reference_data/onedstds/eso/*
    reference_data/onedstds/eso/Xshooter/*
    reference_data/onedstds/eso/ctiostan/*
    reference_data/onedstds/eso/hststan/*
    reference_data/onedstds/eso/okestan/*
    reference_data/onedstds/eso/wdstan/*

[tool:pytest]
testpaths = "specreduce-data" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    specreduce-data/_astropy_init*
    specreduce-data/conftest.py
    specreduce-data/*setup_package*
    specreduce-data/tests/*
    specreduce-data/*/tests/*
    specreduce-data/extern/*
    specreduce-data/version*
    */specreduce-data/_astropy_init*
    */specreduce-data/conftest.py
    */specreduce-data/*setup_package*
    */specreduce-data/tests/*
    */specreduce-data/*/tests/*
    */specreduce-data/extern/*
    */specreduce-data/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
